--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-	"name": "Prima Tora",
+	"name": "Prima-Tora",
 	"version": "1.0.0",
 	"description": "AquaGradus Prima Tora",
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
-	"author": "WebDesign Master",
+	"author": "Rudavin Artyom",
 	"license": "ISC",
 	"devDependencies": {
-		"browser-sync": "^2.26.5",
+		"browser-sync": "^2.26.7",
 		"del": "^4.1.1",
-		"gulp": "^4.0.2",
 		"gulp-autoprefixer": "^6.1.0",
 		"gulp-clean-css": "^4.2.0",
 		"gulp-concat": "^2.6.1",
 		"gulp-image-resize": "^0.13.0",
-		"gulp-imagemin": "^5.0.3",
+		"gulp-imagemin": "^6.0.0",
 		"gulp-notify": "^3.2.0",
 		"gulp-rename": "^1.4.0",
 		"gulp-rsync": "0.0.8",
 		"gulp-sass": "^4.0.2",
 		"gulp-uglify": "^3.0.2",
 		"gulp-util": "^3.0.8"
+	},
+	"dependencies": {
+		"gulp": "^4.0.2"
 	}
 }
